inicio da dashboard

--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,5 @@
 DATABASE_URL=mysql+pymysql://root:@localhost/plantas_medicinais
 NEXT_PUBLIC_API_URL=http://localhost:5000/api
+
+ADMIN_API_PORT=5001
+FLASK_DEBUG=True
