--- a/backend/.env
+++ b/backend/.env
@@ -3,3 +3,4 @@ NEXT_PUBLIC_API_URL=http://localhost:5000/api
 
 ADMIN_API_PORT=5001
 FLASK_DEBUG=True
+UPLOAD_FOLDER=D:\Elcar\uploads\plantas_imagens
